# Image-Processor

./: CMakeLists.txt  image_processor.cpp  image_processor.h  input_manipulator.cpp  input_manipulator.h  major_classes.cpp  major_classes.h  test.cpp
filters/: crop.cpp  edge_detection.cpp  filters.cpp  filters.h  gaussian_blur.cpp  glass_distortion.cpp  grayscale.cpp  negative.cpp  sharpening.cpp
test_script/: test_image_processor.py
